// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates correct metadata for: dynamic route 1`] = `
{
  "canonical": undefined,
  "description": "View transaction 0x12345 on Wefinder (Wefinder) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Wefinder transaction 0x12345 | Wefinder",
  },
  "title": "Wefinder transaction 0x12345 | Wefinder",
}
`;

exports[`generates correct metadata for: dynamic route with API data 1`] = `
{
  "canonical": undefined,
  "description": "0x12345, balances and analytics on the Wefinder (Wefinder) Explorer",
  "opengraph": {
    "description": "",
    "imageUrl": "",
    "title": "Wefinder USDT token details | Wefinder",
  },
  "title": "Wefinder USDT token details | Wefinder",
}
`;

exports[`generates correct metadata for: static route 1`] = `
{
  "canonical": "http://localhost:3000/txs",
  "description": "Wefinder is the #1 open-source blockchain explorer available today. 100+ chains and counting rely on Wefinder data availability, APIs, and ecosystem tools to support their networks.",
  "opengraph": {
    "description": "",
    "imageUrl": "http://localhost:3000/static/og_placeholder.png",
    "title": "Wefinder transactions - Wefinder explorer | Wefinder",
  },
  "title": "Wefinder transactions - Wefinder explorer | Wefinder",
}
`;
